# functorhub.github.io

./: .gitignore  .gitmodules  CNAME  allBuild.sh  build.sh  deploy.sh  functorhub.cabal  go.sh  index.html  site  site.hs  site.sc  trl.sh
assets/: all.css
code/typeclasses/implicit-conversions/src/main/scala/implicitconversions/: Main.scala
posts/: bar.md
posts/typeclasses/: foo.md  implicits.html  implicits.md  sample.html  sample.md
templates/: default.html  post.html
